Fixed the size of the cards and the scrollbar in the text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,12 +64,15 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   padding: 20px;
   background-color: #fffcf8;
   border-radius: 2rem;
   box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
   max-width: 240px;
-  max-height: 421.234px;
+  /* max-height: 421.234px; */
+  height: 500px;
+
   /* transition: all 0.5s ease; */
 }
 
@@ -92,7 +95,7 @@ footer {
 .card__description {
   text-align: justify;
   /* color: #192bc2; */
-  max-height: 63px;
+  /* max-height: 63px; */
   overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: grey transparent;
@@ -142,6 +145,7 @@ footer {
   .card {
     box-shadow: none;
     transition: all 0.5s ease;
+    max-height: 421.234px;
   }
 
   .card:hover {
